# System-Software-Lab

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: c-build-test.yml
src/: fcfs.c  priority.c  rr.c  sjf.c
